[workspace]
resolver = "2"
members = ["crates/litesvm"]
exclude = ["crates/node-litesvm/tests/clock-example"]

[workspace.package]
version = "0.10.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/LiteSVM/litesvm"
rust-version = "1.86.0"

[workspace.dependencies]
agave-feature-set = "3.1.0"
agave-precompiles = "3.1.0"
agave-reserved-account-keys = "3.1.0"
agave-syscalls = "3.1.0"
ansi_term = "0.12"
bincode = "1.3.3"
bv = "0.11.1"
criterion = "0.8"
ed25519-dalek = "=1.0.1"
hashbrown = "0.16.0"
hex = "0.4.3"
indexmap = "2.12"
itertools = "0.14"
libsecp256k1 = "0.6.0"
litesvm = { path = "crates/litesvm", version = "0.10" }
log = "0.4"
napi = { version = "3.8.3", default-features = false }
napi-build = "2.3.1"
napi-derive = "3.5.2"
qualifier_attr = "0.2.2"
serde = "1.0.203"
sha2 = "0.10.9"
smallvec = "1.13"
test-log = "0.2"
thiserror = "2.0"

[profile.bench]
debug = true

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.lints.clippy]
result_large_err = "allow"
