[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["crates/node-litesvm/tests/clock-example"]

[workspace.package]
version = "0.14.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/LiteSVM/litesvm"
rust-version = "1.89.0"

[workspace.dependencies]
agave-feature-set = "4.1.1"
agave-precompiles = "4.1.1"
agave-reserved-account-keys = "4.1.1"
solana-syscalls = "4.1.1"
ansi_term = "0.12"
bv = "0.11.1"
criterion = "0.8.2"
ed25519-dalek = "2.1.1"
hashbrown = "0.16.0"
hex = "0.4.3"
indexmap = "2.12"
itertools = "0.14"
libsecp256k1 = "0.7.2"
litesvm = { path = "crates/litesvm", version = "0.14" }
log = "0.4"
napi = { version = "3.10.2", default-features = false }
napi-build = "2.3.2"
napi-derive = "3.5.9"
nom = "8.0.0"
qualifier_attr = "0.2.2"
serde = "1.0.203"
sha2 = "0.10.9"
smallvec = "1.13"
solana-account = "4.3.0"
solana-address = ">=2.2, <3"
solana-address-lookup-table-interface = "3.1.0"
solana-builtins = "4.1.1"
solana-clock = "3.1.1"
solana-compute-budget = "4.1.1"
solana-compute-budget-instruction = "4.1.1"
solana-compute-budget-interface = "3.0.0"
solana-ed25519-program = "3.0.0"
solana-epoch-rewards = "3.0.1"
solana-epoch-schedule = "3.1.0"
solana-fee = "4.1.1"
solana-feature-gate-interface = "4.0.0"
solana-fee-structure = "3.0.0"
solana-hash = "4.3.0"
solana-instruction = "3.4.0"
solana-instruction-error = "2.4.0"
solana-instructions-sysvar = "4.0.0"
solana-keypair = "3.1.2"
solana-last-restart-slot = "3.0.0"
solana-loader-v3-interface = "8.0.1"
solana-loader-v4-interface = "3.1.0"
solana-message = "4.2.4"
solana-native-token = "3.0.0"
solana-nonce = "3.2.0"
solana-nonce-account = "4.1.0"
solana-precompile-error = "3.0.0"
solana-program-error = "3.0.1"
solana-program-option = "3.1.0"
solana-program-pack = "3.1.0"
solana-program-runtime = "4.1.1"
solana-rent = "4.2.0"
solana-sdk-ids = "3.1.0"
solana-secp256k1-program = "3.0.1"
solana-sha256-hasher = "3.1.0"
solana-signature = "3.4.1"
solana-signer = "3.0.1"
solana-slot-hashes = "3.0.1"
solana-slot-history = "3.1.0"
solana-stake-history = "1.0.0"
solana-stake-interface = "3.1.0"
solana-svm-callback = "4.1.1"
solana-svm-log-collector = "4.1.1"
solana-svm-timings = "4.1.1"
solana-svm-transaction = "4.1.1"
solana-system-interface = "3.2.0"
solana-system-program = "4.1.1"
solana-sysvar = "4.1.0"
solana-sysvar-id = "3.1.0"
solana-transaction = "4.1.5"
solana-transaction-context = "4.1.1"
solana-transaction-error = "3.3.1"
solana-vote-interface = "6.0.3"
spl-associated-token-account-interface = "2.0.0"
spl-token-2022-interface = "3.1.1"
spl-token-interface = "3.0.0"
tempfile = "3"
test-log = "0.2"
thiserror = "2.0.17"
wincode = "0.5.5"
wincode-derive = "0.4.6"

[profile.bench]
debug = true

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.lints.clippy]
result_large_err = "allow"
