[package]
name = "litesvm-helpers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "spl"
required-features = ["token-2022"]

[features]
default = []
token = ["spl-token"]
token-2022 = ["spl-token-2022"]

[dependencies]
litesvm.workspace = true
solana-sdk.workspace = true
spl-token-2022 = { workspace = true, optional = true }
spl-token = { workspace = true, optional = true }
spl-associated-token-account.workspace = true

[dev-dependencies]
test-log.workspace = true
