[package]
name = "litesvm-helpers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["loader", "token-2022"]
loader = []
token = ["spl-token"]
token-2022 = ["spl-token-2022"]

[dependencies]
spl-associated-token-account = { workspace = true, features = [
    "no-entrypoint",
] }
litesvm.workspace = true
solana-sdk.workspace = true
spl-token-2022 = { workspace = true, optional = true, features = [
    "no-entrypoint",
] }
spl-token = { workspace = true, optional = true, features = ["no-entrypoint"] }
smallvec.workspace = true

[dev-dependencies]
test-log.workspace = true
