[package]
name = "lite-program-test"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lite-svm.workspace = true
solana-sdk.workspace = true

[dev-dependencies]
spl-token.workspace = true
counter = { path = "tests/counter" }
criterion =  "0.4" 

[[bench]]
name = "simple_bench"
harness = false
