[package]
name = "blowpipe-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
solana-program-runtime.workspace = true
solana-bpf-loader-program.workspace = true
solana-sdk.workspace = true
solana-system-program.workspace = true
solana-compute-budget-program.workspace = true
solana-loader-v4-program.workspace = true
bincode.workspace = true

[dev-dependencies]
spl-token.workspace = true
solana-program.workspace = true
