[package]
name = "litesvm"
description = "A fast and lightweight Solana VM simulator for testing solana programs"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
readme = "../../README.md"

[features]
internal-test = []
invocation-inspect-callback = []
nodejs-internal = ["dep:qualifier_attr"]
hashbrown = ["dep:hashbrown"]
serde = []

[dependencies]
ansi_term.workspace = true
bincode.workspace = true
hashbrown = { workspace = true, optional = true }
indexmap.workspace = true
itertools.workspace = true
ethnum = "1.5.2"
jupnet-bpf-loader-program = { git = "https://github.com/jupnet/jupnet-svm.git", rev = "e0f0c00427b3b52e7a744cef7dcff21a7df3e0c4" }
jupnet-cluster-identity-management-program = { git = "https://github.com/jupnet/jupnet-svm.git", rev = "e0f0c00427b3b52e7a744cef7dcff21a7df3e0c4" }
jupnet-compute-budget = { git = "https://github.com/jupnet/jupnet-svm.git", rev = "e0f0c00427b3b52e7a744cef7dcff21a7df3e0c4" }
jupnet-compute-budget-program = { git = "https://github.com/jupnet/jupnet-svm.git", rev = "e0f0c00427b3b52e7a744cef7dcff21a7df3e0c4" }
jupnet-config-program = { git = "https://github.com/jupnet/jupnet-svm.git", rev = "e0f0c00427b3b52e7a744cef7dcff21a7df3e0c4" }
jupnet-feature-set = { git = "https://github.com/jupnet/jupnet-svm.git", rev = "e0f0c00427b3b52e7a744cef7dcff21a7df3e0c4" }
jupnet-loader-v4-program = { git = "https://github.com/jupnet/jupnet-svm.git", rev = "e0f0c00427b3b52e7a744cef7dcff21a7df3e0c4" }
jupnet-log-collector = { git = "https://github.com/jupnet/jupnet-svm.git", rev = "e0f0c00427b3b52e7a744cef7dcff21a7df3e0c4" }
jupnet-program-runtime = { git = "https://github.com/jupnet/jupnet-svm.git", rev = "e0f0c00427b3b52e7a744cef7dcff21a7df3e0c4" }
jupnet-sdk = { git = "https://github.com/jupnet/jupnet-svm.git", rev = "e0f0c00427b3b52e7a744cef7dcff21a7df3e0c4" }
jupnet-stake-program = { git = "https://github.com/jupnet/jupnet-svm.git", rev = "e0f0c00427b3b52e7a744cef7dcff21a7df3e0c4" }
jupnet-svm-transaction = { git = "https://github.com/jupnet/jupnet-svm.git", rev = "e0f0c00427b3b52e7a744cef7dcff21a7df3e0c4" }
jupnet-system-program = { git = "https://github.com/jupnet/jupnet-svm.git", rev = "e0f0c00427b3b52e7a744cef7dcff21a7df3e0c4" }
jupnet-timings = { git = "https://github.com/jupnet/jupnet-svm.git", rev = "e0f0c00427b3b52e7a744cef7dcff21a7df3e0c4" }
jupnet-transaction-error = { git = "https://github.com/jupnet/jupnet-svm.git", rev = "e0f0c00427b3b52e7a744cef7dcff21a7df3e0c4" }
jupnet-vote-program = { git = "https://github.com/jupnet/jupnet-svm.git", rev = "e0f0c00427b3b52e7a744cef7dcff21a7df3e0c4" }
log.workspace = true
qualifier_attr = { workspace = true, optional = true }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde.workspace = true
arrayref = "0.3.9"
test-log.workspace = true

[lints]
workspace = true
