[package]
name = "litesvm-loader"
description = "Helpers for working with bpf_loader and LiteSVM"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
litesvm.workspace = true

[dev-dependencies]
solana-instruction.workspace = true
solana-keypair.workspace = true
solana-pubkey.workspace = true
test-log.workspace = true

[lints]
workspace = true
