[package]
name = "litesvm-token"
description = "Helpers for working with spl-token and LiteSVM"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = ["spl-token"]
token-2022 = ["spl-token-2022"]

[dependencies]
litesvm.workspace = true
smallvec = "1.13"
solana-keypair.workspace = true
solana-program-pack.workspace = true
solana-pubkey.workspace = true
solana-signer.workspace = true
solana-system-interface.workspace = true
solana-transaction = { workspace = true, features = ["precompiles", "verify"] }
solana-transaction-error.workspace = true
spl-associated-token-account-client = "2.0"
spl-token = { version = "7.0.0", optional = true, features = ["no-entrypoint"] }
spl-token-2022 = { version = "6.0.0", optional = true, features = [
    "no-entrypoint",
] }

[dev-dependencies]
solana-native-token.workspace = true

[lints]
workspace = true

[[test]]
name = "native_mint"
required-features = ["token-2022"]
