[package]
name = "litesvm-token"
description = "Helpers for working with spl-token and LiteSVM"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = ["spl-token"]
token-2022 = ["spl-token-2022"]

[dependencies]
litesvm.workspace = true
smallvec.workspace = true
solana-keypair.workspace = true
solana-program-pack.workspace = true
solana-pubkey.workspace = true
solana-signer.workspace = true
solana-system-interface.workspace = true
solana-transaction = { workspace = true, features = ["precompiles", "verify"] }
solana-transaction-error.workspace = true
spl-associated-token-account-client.workspace = true
spl-token = { workspace = true, optional = true, features = ["no-entrypoint"] }
spl-token-2022 = { workspace = true, optional = true, features = [
    "no-entrypoint",
] }

[dev-dependencies]
solana-native-token.workspace = true

[lints]
workspace = true

[[test]]
name = "native_mint"
required-features = ["token-2022"]
