[package]
name = "cu_mismatch_repro"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
anyhow = "1"
base64 = "0.22"
bincode = "1.3.3"
litesvm = { path = "../../crates/litesvm", features = ["precompiles"] }
mollusk-svm = { version = "0.10.3", features = ["precompiles", "all-builtins"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-account = "3.3.0"
solana-epoch-schedule = "3.0"
solana-instruction = "3.0"
solana-loader-v3-interface = "6.1"
solana-message = "3"
solana-pubkey = "3.0"
solana-rent = "3.1"
solana-sdk = "3.0"
solana-sdk-ids = "3.1"
