[workspace]
members = [
    "clock-example",
    "counter",
    "delegated-counter",
    "failure",
    "custom-syscall",
]
resolver = "2"

[workspace.dependencies]
borsh = "1.5.5"
ephemeral-rollups-sdk = "0.10.1"
solana-account-info = "3.0"
solana-clock = "3.0"
solana-cpi = "3.1.0"
solana-instruction = "3.0"
solana-msg = "3.0"
solana-program-entrypoint = "3.0"
solana-program-error = "3.0"
solana-pubkey = "3.0"
solana-sdk-ids = "3.0"
solana-system-interface = "2.0"
solana-sysvar = { version = "3.0", features = ["bincode"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
