[workspace]
members = ["clock-example", "counter", "failure", "custom-syscall", "cpi-maker", "epoch-stake"]
resolver = "2"

[workspace.dependencies]
borsh = "1.5.5"
solana-account-info = "3.0"
solana-clock = "3.0"
solana-epoch-stake = "3.0"
solana-cpi = "3.0"
solana-define-syscall = "4.0"
solana-instruction = "3.0"
solana-msg = "3.0"
solana-program-entrypoint = "3.0"
solana-program-error = "3.0"
solana-pubkey = "3.0"
solana-sysvar = { version = "3.0", features = ["bincode"] }


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
